--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sap/xsenv": "^3.3.2",
     "@sap/xssec": "^3.2.13",
+    "jest": "^29.0.3",
     "nodemailer": "^6.7.8"
   }
 }
